quickquestions; tijdelijke fix (2 lege argumenten gegeven {}{} )

--- a/6dejaar/kinematica/knmtc_1dim_EVRB_calculus_met_int.tex
+++ b/6dejaar/kinematica/knmtc_1dim_EVRB_calculus_met_int.tex
@@ -67,13 +67,13 @@ Blijkbaar houdt het eenparig toenemen van de snelheid in dat we het rekenkundig 
 
 
 
-% \begin{quickquestion*}
-% \begin{itemize}
-% 	\item Op het moment\(t_1\) de snelheid gelijk aan nul, is de versnelling dan ook gelijk aan nul? 
-% 	\item Op het moment\(t_1\) de vernelling gelijk aan nul, is de snelheid dan ook gelijk aan nul? 
-% 	\item Als een auto vertraagd, is de versnelling dan negatief? 
-% \end{itemize}
-% \end{quickquestion*}
+\begin{quickquestion*}{}{}
+\begin{itemize}
+	\item Op het moment\(t_1\) de snelheid gelijk aan nul, is de versnelling dan ook gelijk aan nul? 
+	\item Op het moment\(t_1\) de vernelling gelijk aan nul, is de snelheid dan ook gelijk aan nul? 
+	\item Als een auto vertraagd, is de versnelling dan negatief? 
+\end{itemize}
+\end{quickquestion*}
 
 \begin{image}
 
