--- a/6dejaar/kinematica/knmtc_1dim_verticale_worp.tex
+++ b/6dejaar/kinematica/knmtc_1dim_verticale_worp.tex
@@ -31,15 +31,13 @@ Strikt genomen verschilt de valversnelling van plaats tot plaats op de aarde, ma
 \[g=9,81\rm\,m/s^2.\]
 Omdat de verticale worp een EVRB is, kunnen we de formules (\ref{x(t)0}) en (\ref{v(t)0}) gebruiken om een valbeweging te beschrijven. Voor de versnelling $a$ nemen we dan $a=g$ of $a=-g$ al naargelang de oriëntatie van de coördinaatas.
 
-% \begin{quickquestion}
+\begin{quickquestion*}{}{}
+Als je een tennisbal in de lucht gooit, op welk(e) moment(en) is de versnelling \(0\)? Op welk(e) moment(en) is de snelheid \(0\)? 
+\end{quickquestion*}
 
-% Als je een tennisbal in de lucht gooit, op welk(e) moment(en) is de versnelling \(0\)? Op welk(e) moment(en) is de snelheid \(0\)? 
-
-% \end{quickquestion}
-
-% \begin{quickquestion}
-% Leg de fysische betekenis uit indien de richting van de snelheidsvector en versnellingsvector tegengesteld zijn. Wat indien ze dezelfde richting hebben?
-% \end{quickquestion}
+\begin{quickquestion*}{}{}
+Leg de fysische betekenis uit indien de richting van de snelheidsvector en versnellingsvector tegengesteld zijn. Wat indien ze dezelfde richting hebben?
+\end{quickquestion*}
 
 
 \begin{exercise}
