--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -405,9 +405,9 @@ Op de plaatsfunctie kan de verplaatsing eenvoudig afgelezen worden:
 \end{image}
 
 % DEZE WERKT NIET IN DE HTML MOMENTEEL... 
-% \begin{quickquestion*}
-% 	Bereken de verplaatsing \(\Delta x = x_4 - x_1\) van de zeilboot en duidt deze verplaatsing aan op de grafiek.  
-% \end{quickquestion*}
+\begin{quickquestion*}{}{}
+	Bereken de verplaatsing \(\Delta x = x_4 - x_1\) van de zeilboot en duidt deze verplaatsing aan op de grafiek.  
+\end{quickquestion*}
 
 
 \textbf{Let op}, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. 
