--- a/6dejaar/vectoren/vct_bewerkingen.tex
+++ b/6dejaar/vectoren/vct_bewerkingen.tex
@@ -100,9 +100,9 @@ In evenwijdige of loodrechte gevallen zijn er efficiënte manieren om de resulta
 
 met \(\alpha\) de hoek tussen \(\vec{a}\) en \(\vec{b}\). 
 
-\begin{quickquestion}
-    Hoe vereenvoudigd de formule als \(\vec{a}\) en \(\vec{b}\) loodrecht staan? Wat als ze evenwijdig (d.w.z. dezelfde richting) zijn? 
-\end{quickquestion}
+\begin{quickquestion*}{}{}
+  Hoe vereenvoudigd de formule als \(\vec{a}\) en \(\vec{b}\) loodrecht staan? Wat als ze evenwijdig (d.w.z. dezelfde richting) zijn? 
+\end{quickquestion*}
 
 \begin{example}
 
@@ -352,9 +352,9 @@ $$
 c = \vec{a} \cdot \vec{b} = \| \vec{a}_x \| \cdot \|\vec{b}\| = \|\vec{a}\| \cdot \cos(\alpha) \cdot \|\vec{b}\| = \| \vec{a}\| \cdot \| \vec{b}\| \cdot \cos(\alpha)
 $$
 
-\begin{quickquestion}
+\begin{quickquestion*}{}{}
     Is de eerste bewerking \(\cdot\) dezelfde als de tweede bewerking \(\cdot\)? Verklaar. 
-\end{quickquestion}
+\end{quickquestion*}
 
 % TIKZPICTURE DIE SCALAIR PRODUCT van a op b ILLUSTREERT  
 \begin{image}
