--- a/6dejaar/vectoren/vct_notatie.tex
+++ b/6dejaar/vectoren/vct_notatie.tex
@@ -133,8 +133,8 @@ Men mag niet noteren dat: $ \vec{c} = 0$
 Linkerlid en rechterlid moeten immers beiden een scalar of beiden een vector zijn!
 \end{remark}
 
-\begin{quickquestion}
+\begin{quickquestion*}{}{}
 Waarom mag je \textbf{niet} noteren dat \(\vec{c} = 0\)? 
-\end{quickquestion}
+\end{quickquestion*}
 	
 \end{document}
