--- a/6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex
+++ b/6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex
@@ -32,7 +32,7 @@ a = \frac{\Delta v}{\Delta t} = \frac{v - v_0}{t - t_0} = \frac{v - v_0}{t}
 \]
 
 
-\begin{quickquestion*}
+\begin{quickquestion*}{}{}
 Waarom geldt er dat voor de EVRB dat \( \overline{a} = a\)? 
 \end{quickquestion*}
 
@@ -70,9 +70,9 @@ Dit alles invullen in de plaatsfunctie levert:
 \Rightarrow \quad x = x_0 + v_0 t + \frac{1}{2}at^2 
 \]
 
-\begin{quickquestion}
+\begin{quickquestion*}{}{}
 	Verklaar in elke tussenstap welke formule er wordt ingevuld. 
-\end{quickquestion}
+\end{quickquestion*}
 
 
 \begin{theorem}
@@ -119,13 +119,13 @@ Blijkbaar houdt het eenparig toenemen van de snelheid in dat we het rekenkundig 
 
 
 
-% \begin{quickquestion*}
-% \begin{itemize}
-% 	\item Op het moment\(t_1\) de snelheid gelijk aan nul, is de versnelling dan ook gelijk aan nul? 
-% 	\item Op het moment\(t_1\) de vernelling gelijk aan nul, is de snelheid dan ook gelijk aan nul? 
-% 	\item Als een auto vertraagd, is de versnelling dan negatief? 
-% \end{itemize}
-% \end{quickquestion*}
+\begin{quickquestion*}{}{}
+\begin{itemize}
+	\item Op het moment\(t_1\) de snelheid gelijk aan nul, is de versnelling dan ook gelijk aan nul? 
+	\item Op het moment\(t_1\) de vernelling gelijk aan nul, is de snelheid dan ook gelijk aan nul? 
+	\item Als een auto vertraagd, is de versnelling dan negatief? 
+\end{itemize}
+\end{quickquestion*}
 
 \begin{image}
 
