--- a/spc/eendimensionaal.tex
+++ b/spc/eendimensionaal.tex
@@ -14,6 +14,7 @@
 %	\setcounter{tocdepth}{2}
     \xmtitle{Kinematica: ééndimensionale bewegingen}{}  
  
+\setcounter{part}{2}
 
     
 \part{Eendimensionale bewegingen}
