xmPreamble:  no tikzexport in  handout

--- a/xmPreamble.tex
+++ b/xmPreamble.tex
@@ -12,8 +12,10 @@
 \makeatother
 
 \ifdefined\isXourse
-    \typeout{tikzexport: in xourse no exports in xourse}
-\else
+    \typeout{tikzexport: in xourse no exports}
+    \else\ifhandout
+    \typeout{tikzexport: in handout no exports}
+    \else
     \typeout{tikzexport: global export settings}
 
 \usepackage{tikz}
@@ -53,7 +55,7 @@
             echo "DONE pdflatex \image"
         },
     }
-\fi
+\fi\fi
 
 %            dvisvgm --pdf --page=1- "\image".pdf -o "\image".svg &&
 
