fix missing \xmcursusnaam

--- a/preamble.tex
+++ b/preamble.tex
@@ -1240,6 +1240,9 @@
 
 
 
+\providecommand{\xmorganisatienaam}{}
+\providecommand{\xmcursusnaam}{}
+\providecommand{\xmafdelingsnaam}{}
 
 
 
@@ -1250,7 +1253,6 @@
         Gebaseerd op de cursus van Bart Lambregs (versie 03/2025)
     \end{xmdiv}
     }{
-        \providecommand{\xmorganisatienaam}{{\smaller Gebaseerd op eigen cursus Bart Lambregs}}
         \renewcommand{\xmorganisatienaam}{{\smaller Gebaseerd op eigen cursus Bart Lambregs}}
     }
 }
