--- a/6dejaar/vectoren/vct_oef_reeks2.tex
+++ b/6dejaar/vectoren/vct_oef_reeks2.tex
@@ -12,7 +12,7 @@
 
 \begin{exercise}\
 
-Gegeven de drie waarvoor geldt \(\|\vec{a} = \SI{4}{N}\),\; \(\|\vec{b} = \SI{2.5}{N}\) \; \(\|\vec{c} = \SI{3}{N}\), \; \(\alpha = 15^\circ\)\;
+Gegeven de drie waarvoor geldt \(\|\vec{a}\| = \SI{4}{N}\),\; \(\|\vec{b} \|= \SI{2.5}{N}\) \; \(\|\vec{c} \|= \SI{3}{N}\), \; \(\alpha = 15^\circ\)\;
 
 Constureer en bepaal de groottes van: 
 	\begin{image}[0.2\textwidth]
@@ -25,7 +25,7 @@ Constureer en bepaal de groottes van:
 			\coordinate (C) at (90:1.8); 
 		
 			\draw[->, very thick, red] (O)--(A) node[midway, below]{$\vec{a}$};
-			\draw[->, very thick, green] (O)--(B) node[midway, below right]{$\vec{b}$};
+			\draw[->, very thick, xmgreen] (O)--(B) node[midway, below right]{$\vec{b}$};
 			\draw[->, very thick, blue] (O)--(C) node[pos=0.8, left]{$\vec{c}$};
 		
 			\draw pic[ pic text= \(\alpha\), draw,  angle radius=0.7cm, angle eccentricity=1.5]{angle = B--O--C};
@@ -111,7 +111,7 @@ Meerdere antwoorden zijn mogelijk.
 
 \begin{exercise}
 	
-Als \(\vec{F} \; \| \; y\), welk(e) van onderstaande uitspraken is dan juist? 
+Als \(\vec{F} \; \| \; \vec{y}\), welk(e) van onderstaande uitspraken is dan juist? 
 Meerdere antwoorden zijn mogelijk. 
 
 \begin{question}
