--- a/6dejaar/vectoren/vct_oef_reeks3.tex
+++ b/6dejaar/vectoren/vct_oef_reeks3.tex
@@ -11,17 +11,19 @@
 
 
 \begin{exercise}
-Bij de opzet van een aanval loopt een voetballer eerst \(15\) m evenwijdig met de zijlijn om vervolgens onder een hoek van \(45\circ\) met de zijlijn \(18\) m naar binnen te snijden. 
+Bij de opzet van een aanval loopt een voetballer eerst \SI{15}{\meter} evenwijdig met de zijlijn om vervolgens onder een hoek van \(45^\circ\) met de zijlijn \SI{18}{\meter} naar binnen te snijden. 
 Hoe ver van het vertrekpunt komt hij uit? Maak een schets met vectoren en voer ook hiermee je berekening uit.
 \end{exercise}
 
 \begin{exercise}
-Vanop dezelfde middenstip vertrekken twee spelers, één wandelt \(9\) m evenwijdig met de zijlijn naar het ene doel en de ander wandelt \(17\) m in een richting die een hoek van \(35\circ\) maakt met de middellijn, naar het andere doel toe. Hoe ver komen de spelers van elkaar uit? Maak een schets met vectoren en voer ook hiermee je berekening uit.
+Vanop dezelfde middenstip vertrekken twee spelers, één wandelt \SI{9}{\meter} evenwijdig met de zijlijn naar het ene doel en de ander wandelt \SI{17}{\meter} in een richting die een hoek van \(35^\circ\) maakt met de middellijn, naar het andere doel toe. 
+Hoe ver komen de spelers van elkaar uit? Maak een schets met vectoren en voer ook hiermee je berekening uit.
 \end{exercise}
 
+\sisetup{per-mode=symbol, per-symbol=/}
 
 \begin{exercise}
-	Twee treinen vertrekken gelijktijdig uit Leuven station met constante snelheden van \(10\) m/s en \(20\) m/s. 
+	Twee treinen vertrekken gelijktijdig uit Leuven station met constante snelheden van \SI{10}{\meter\per\second} en \SI{20}{\meter\per\second}.
 	De trage trein rijdt recht naar Mechelen en de andere recht naar Aarschot. 
 	
 	\begin{image}[0.4\textwidth]
@@ -57,13 +59,13 @@ Vanop dezelfde middenstip vertrekken twee spelers, één wandelt \(9\) m evenwij
 \end{exercise}
 
 \begin{exercise}
-	Geldt er algemeen dat \(\vec{a} \cdot \vec{b} = \vec{b} \cdot \vec{a}\)? 
-	Geldt er dat \(\vec{a} \times \vec{b} = \vec{b} \times \vec{a}\)? 
+	Geldt er algemeen dat \(\vec{a} \cdot \vec{b} = \vec{b} \cdot \vec{a}\) \,? 
+	Geldt er dat \(\vec{a} \times \vec{b} = \vec{b} \times \vec{a}\) \,? 
 	Verklaar kort.
 \end{exercise}
 
 \begin{exercise}
-	Kan er gelden dat \(\vec{a} \cdot \vec{b} = \| \vec{a} \times \vec{b} \|\)? 
+	Kan er gelden dat \(\vec{a} \cdot \vec{b} = \| \vec{a} \times \vec{b} \|\) \,? 
 	Zoja, geef de nodige voorwaarden en zoniet, verklaar. 
 \end{exercise}
 \end{document}
