skip oef2D no import
Undefined control sequence.    at <argument> \csname :autoref\endcsname {\NR <- :Type }\textup {(a)}

--- a/Oef2D.tex
+++ b/Oef2D.tex
@@ -23,6 +23,6 @@
 
 % 
 \activitychapter{6dejaar/dynamica/exercises/vragen_2Dimport.tex}
-\activitychapter{6dejaar/dynamica/exercises/vragen_2Dnoimport.tex}
+%\activitychapter{6dejaar/dynamica/exercises/vragen_2Dnoimport.tex}
 
 \end{document}
